# kb

./: Cargo.toml
keychron_c2_white/: Cargo.toml  memory.x  release.sh
keychron_c2_white/src/: main.rs
sn32f26x/: Cargo.toml  SN32F260_patched.svd  device.x
sn32f26x/src/: lib.rs  sn_ct16b0.rs  sn_ct16b1.rs  sn_flash.rs  sn_gpio3.rs  sn_i2c0.rs  sn_pmu.rs  sn_spi0.rs  sn_sys0.rs  sn_sys1.rs  sn_uc.rs  sn_usb.rs  sn_wdt.rs
sn32f26x/src/sn_ct16b0/: cap0.rs  capctrl.rs  cntctrl.rs  ic.rs  mctrl.rs  mr0.rs  pre.rs  ris.rs
sn32f26x/src/sn_ct16b1/: em.rs  emc.rs  emc2.rs  ic.rs  mctrl.rs  mctrl2.rs  mctrl3.rs  mr1.rs  mr10.rs  mr11.rs  mr12.rs  mr13.rs  mr14.rs  mr15.rs  mr16.rs  mr17.rs  mr18.rs  mr19.rs  mr2.rs  mr20.rs  mr21.rs  mr22.rs  mr23.rs  mr3.rs  mr4.rs  mr5.rs  mr6.rs  mr7.rs  mr8.rs  mr9.rs  pc.rs  pwmctrl.rs  pwmctrl2.rs  pwmenb.rs  pwmioenb.rs  ris.rs  tc.rs  tmrctrl.rs
sn32f26x/src/sn_flash/: addr.rs  chksum.rs  ctrl.rs  data.rs  lpctrl.rs  status.rs
sn32f26x/src/sn_gpio0/: bclr.rs  bset.rs  cfg.rs  data.rs  ibs.rs  ic.rs  ie.rs  iev.rs  is.rs  mode.rs  ris.rs
sn32f26x/src/sn_gpio1/: bclr.rs  bset.rs  cfg.rs  data.rs  ibs.rs  ic.rs  ie.rs  iev.rs  is.rs  mode.rs  ris.rs
sn32f26x/src/sn_gpio2/: bclr.rs  bset.rs  cfg.rs  data.rs  ibs.rs  ic.rs  ie.rs  iev.rs  is.rs  mode.rs  ris.rs
sn32f26x/src/sn_gpio3/: bclr.rs  bset.rs  cfg.rs  data.rs  ibs.rs  ic.rs  ie.rs  iev.rs  is.rs  mode.rs  ris.rs
sn32f26x/src/sn_i2c0/: ctrl.rs  rxdata.rs  sclct.rs  sclht.rs  scllt.rs  slvaddr0.rs  slvaddr1.rs  slvaddr2.rs  slvaddr3.rs  stat.rs  toctrl.rs  txdata.rs
(+56 files in other folders)
