[package]
authors = ["Glenn Griffin"]
edition = "2021"
readme = "README.md"
name = "keychron_c2_white"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-abort = "0.3.2"
vcell = "0.1.3"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# this lets you use `cargo fix`!
[[bin]]
name = "keychron_c2_white"
test = false
bench = false
